--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "birtatweb",
-    "short_name": "birtatweb",
+    "name": "EFX",
+    "short_name": "EFX",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
